--- a/cart/index.html
+++ b/cart/index.html
@@ -10,10 +10,7 @@
     />
 
     <title>Orinoco-Panier</title>
-    <link
-      rel="canonical"
-      href="https://rgalegria.github.io/orinoco/cart/index.html"
-    />
+    <link rel="canonical" href="https://rgalegria.github.io/orinoco/cart/" />
 
     <!-- Favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -65,7 +62,7 @@
       }
     </script>
 
-    <!-- Font -->
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,500,700&display=swap"
       rel="stylesheet"
@@ -84,12 +81,11 @@
     ></script>
 
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="css/main.min.css" /> -->
+    <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
 
     <!-- Javascript -->
     <!-- <script src="/js/cart.min.js" defer></script> -->
     <!-- <script src="/js/form.min.js" defer></script> -->
-    <!-- <script src="/js/form-control.min.js" defer></script> -->
 
     <!-- Dev. CSS -->
     <link rel="stylesheet" href="/css/main.css" />
@@ -97,7 +93,6 @@
     <!-- Dev. JavaScript -->
     <script src="/js/cart.js" defer></script>
     <script src="/js/form.js" defer></script>
-    <script src="/js/form-control.js" defer></script>
 
     <!-- Google Analytics -->
     <script>
@@ -125,6 +120,7 @@
       ga("send", "pageview");
     </script>
   </head>
+
   <body>
     <main class="payment">
       <!--Form-->
@@ -148,7 +144,6 @@
               <input
                 id="email"
                 class="form-control form__box"
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                 type="email"
                 placeholder="E-mail"
                 required
@@ -169,22 +164,20 @@
             <label for="name">Adresse de livraison</label>
             <div class="details__address">
               <input
-                id="first-name"
-                class="form-control form__box"
-                type="text"
-                name="name"
-                pattern="[a-zA-Z]+"
-                autocomplete="given-name"
-                placeholder="Nom"
-                required
-              />
-              <input
                 id="last-name"
                 class="form-control form__box"
                 type="text"
                 name="lastname"
-                pattern="[a-zA-Z]+"
                 autocomplete="family-name"
+                placeholder="Nom"
+                required
+              />
+              <input
+                id="first-name"
+                class="form-control form__box"
+                type="text"
+                name="name"
+                autocomplete="given-name"
                 placeholder="Prénom"
                 required
               />
@@ -204,6 +197,7 @@
                 name="address-complement"
                 autocomplete="address-line1"
                 placeholder="Complément d'adresse"
+                disabled
               />
               <input
                 id="zipcode"
@@ -211,13 +205,14 @@
                 type="text"
                 inputmode="numeric"
                 pattern="[0-9]{5}"
-                min="00000"
+                min="000"
                 max="99999"
                 name="zipcode"
                 autocomplete="postal-code"
                 minlength="4"
                 maxlength="5"
                 placeholder="Code postale (75001)"
+                disabled
               />
               <input
                 id="city"
@@ -225,7 +220,6 @@
                 type="text"
                 name="town"
                 autocomplete="address-level2"
-                pattern="[a-zA-Z]+"
                 placeholder="Ville"
               />
               <input
@@ -233,9 +227,9 @@
                 class="form-control form__box"
                 type="text"
                 name="country"
-                pattern="[a-zA-Z]+"
                 autocomplete="country-name"
                 placeholder="Pays"
+                disabled
               />
             </div>
 
@@ -268,6 +262,7 @@
                   name="owner"
                   type="text"
                   placeholder="Titulaire"
+                  disabled
                 />
                 <input
                   id="card-number"
@@ -278,6 +273,7 @@
                   name="card"
                   autocomplete="cc-number"
                   placeholder="Numéro de carte (0000 0000 0000 0000)"
+                  disabled
                 />
                 <input
                   id="card-cvv"
@@ -289,6 +285,7 @@
                   inputmode="numeric"
                   maxlength="3"
                   autocomplete="cc-csc"
+                  disabled
                 />
                 <input
                   id="card-month"
@@ -299,6 +296,7 @@
                   inputmode="numeric"
                   maxlength="2"
                   placeholder="mm"
+                  disabled
                 />
                 <input
                   id="card-year"
@@ -309,6 +307,7 @@
                   inputmode="numeric"
                   maxlength="2"
                   placeholder="yy"
+                  disabled
                 />
               </div>
             </div>
@@ -360,8 +359,10 @@
                   class="form-control form__box cart__product__promocode__input"
                   type="text"
                   placeholder="Code promo / chèque cadeau"
+                  disabled
                 />
                 <button
+                  disabled
                   id="secondary-btn"
                   class="secondary-btn cart__product__promocode__btn"
                 >
@@ -409,9 +410,7 @@
               paiement
             </button>
             <div class="underlinedgrey-btn cart__product__return">
-              <a
-                class="underlinedgrey-btn__link"
-                href="/product-list/index.html"
+              <a class="underlinedgrey-btn__link" href="/product-list/"
                 >retourner au site</a
               >
             </div>
