--- a/order/index.html
+++ b/order/index.html
@@ -9,10 +9,10 @@
       content="Le site web pour retrouver les meilleurs références en appareils photo vintage."
     />
 
-    <title>Orinoco - Appareils Photo Vintage</title>
-    <link rel="canonical" href="https://rgalegria.github.io/Orinoco/" />
+    <title>Orinoco - Votre Commande</title>
+    <link rel="canonical" href="https://rgalegria.github.io/Orinoco/order/" />
 
-    <!-- Font -->
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,500,700&display=swap"
       rel="stylesheet"
@@ -30,14 +30,16 @@
     ></script>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/css/main.css" />
     <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
 
     <!-- Javascript -->
+    <!-- <script src="/js/confirmation.min.js" defer></script> -->
+
+    <!-- Dev. CSS -->
+    <link rel="stylesheet" href="/css/main.css" />
+
+    <!-- Dev. JavaScript -->
     <script src="/js/confirmation.js" defer></script>
-    <!-- <script src="../js/app.js" defer></script> -->
-    <!-- <script src="../js/form.js" defer></script> -->
-    <!-- <script src="../js/form-control.js" defer></script> -->
   </head>
   <body>
     <div class="confirmation">
@@ -61,13 +63,13 @@
         </p>
         <img
           class="confirmation__logo"
-          src="../img/logo-orinoco-appareils-photo-vintage.png"
+          src="/img/logo-orinoco-appareils-photo-vintage.png"
           alt="Logo de Orinoco, e-commerce d'appareils photo vintage"
         />
       </article>
       <footer class="confirmation__footer">
         <div class="underlinedgrey-btn confirmation__return-btn">
-          <a class="underlinedgrey-btn__link" href="../product-list/index.html"
+          <a class="underlinedgrey-btn__link" href="/product-list/"
             >retourner au site</a
           >
         </div>
