--- a/product-list/index.html
+++ b/product-list/index.html
@@ -12,7 +12,7 @@
     <title>Orinoco-Liste de Produits</title>
     <link
       rel="canonical"
-      href="https://rgalegria.github.io/orinoco/product-list/index.html"
+      href="https://rgalegria.github.io/orinoco/product-list/"
     />
 
     <!-- Favicons-->
@@ -65,7 +65,7 @@
       }
     </script>
 
-    <!-- Font -->
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,500,700&display=swap"
       rel="stylesheet"
@@ -84,7 +84,7 @@
     ></script>
 
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="css/main.min.css" /> -->
+    <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
 
     <!-- Javascript -->
     <!-- <script src="/js/dropdown-menu.min.js" defer></script> -->
@@ -159,7 +159,7 @@
     <header class="navbar">
       <!-- Navigation logo-->
       <div class="navbar__logo">
-        <a class="navbar__logo__link" href="/index.html">
+        <a class="navbar__logo__link" href="/">
           <img
             src="/img/logo-orinoco-appareils-photo-vintage.png"
             alt="Logo de Orinoco, e-commerce d'appareils photo vintage"
@@ -170,13 +170,19 @@
       <!-- Navigation Btns-->
       <!-- Main Menu Btn -->
       <div class="navbar__wrap">
-        <button id="menu-btn" type="button" class="nav-btn navbar__wrap__menu">
+        <button
+          id="menu-btn"
+          aria-label="menu principal"
+          type="button"
+          class="nav-btn navbar__wrap__menu"
+        >
           <img src="/img/orinoco-menu-icon.svg" alt="menu principal" />
         </button>
 
         <!-- Currencies Btn -->
         <button
           id="currency-btn"
+          aria-label="menu divises"
           type="button"
           class="nav-btn navbar__wrap__currency"
         >
@@ -184,11 +190,17 @@
         </button>
 
         <!-- Cart Btn -->
-        <button id="cart-btn" type="button" class="nav-btn navbar__wrap__cart">
+        <button
+          id="cart-btn"
+          aria-label="panier"
+          type="button"
+          class="nav-btn navbar__wrap__cart"
+        >
           <div id="cart-pilot" class="nav-btn navbar__wrap__cart__pilot"></div>
           <i class="fas fa-shopping-basket navbar__icons"></i>
         </button>
       </div>
+
       <!-- Navigation Main Menu-->
       <nav
         id="main-menu"
@@ -200,14 +212,12 @@
             <li>
               <a
                 class="main__menu__link main__menu__link--active menu-hover"
-                href="/index.html"
+                href="/"
                 >home</a
               >
             </li>
             <li>
-              <a
-                class="main__menu__link menu-hover"
-                href="/product-list/index.html"
+              <a class="main__menu__link menu-hover" href="/product-list/"
                 >liste de produits</a
               >
             </li>
@@ -235,7 +245,7 @@
             </li>
             <li>
               E-mal :
-              <a class="menu-hover" href="mailto:e-mal : shop@orinoco.fr"
+              <a class="menu-hover" href="mailto:shop@orinoco.fr"
                 >shop@orinoco.fr</a
               >
             </li>
@@ -258,7 +268,6 @@
             </li>
             <li class="main__menu__networks__item">
               <a
-                aria-label=""
                 class="main__menu__networks__link menu-hover"
                 href="https://www.twitter.com"
                 ><i class="fab fa-twitter"></i
@@ -299,7 +308,6 @@
 
       <!-- Navigation Cart-->
       <nav id="cart-menu" class="cart__menu dropdown" aria-label="panier">
-        <!-- <article class="cart"> -->
         <header class="cart__menu__header">
           <h1 class="cart__menu__title">mon panier</h1>
           <p id="articles-msg" class="cart__menu__info">
@@ -310,7 +318,10 @@
         <!--Cart product-->
         <section id="empty-cart" class="cart__menu__empty">
           <div class="cart__menu__empty__img">
-            <img src="../img/cactus.svg" alt="" />
+            <img
+              src="/img/cactus.svg"
+              alt="image d'un cactus indiquand la manque de produits dans le panier d'orinoco"
+            />
           </div>
           <h4>votre panier est désert</h4>
         </section>
@@ -325,9 +336,7 @@
             ></span>
           </h3>
           <div class="cta-btn cart__menu__product__btn">
-            <a class="cta-btn__link" href="../cart/index.html"
-              >Aller au panier</a
-            >
+            <a class="cta-btn__link" href="/cart/">Aller au panier</a>
           </div>
         </div>
       </nav>
