--- a/product/index.html
+++ b/product/index.html
@@ -61,7 +61,7 @@
       }
     </script>
 
-    <!-- Font -->
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald:300,500,700&display=swap"
       rel="stylesheet"
@@ -80,7 +80,7 @@
     ></script>
 
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="css/main.min.css" /> -->
+    <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
 
     <!-- Javascript -->
     <!-- <script src="/js/dropdown-menu.min.js" defer></script> -->
@@ -155,7 +155,7 @@
     <header class="navbar">
       <!-- Navigation logo-->
       <div class="navbar__logo">
-        <a class="navbar__logo__link" href="/index.html">
+        <a class="navbar__logo__link" href="/">
           <img
             src="/img/logo-orinoco-appareils-photo-vintage.png"
             alt="Logo de Orinoco, e-commerce d'appareils photo vintage"
@@ -166,13 +166,19 @@
       <!-- Navigation Btns-->
       <!-- Main Menu Btn -->
       <div class="navbar__wrap">
-        <button id="menu-btn" type="button" class="nav-btn navbar__wrap__menu">
+        <button
+          id="menu-btn"
+          aria-label="menu principal"
+          type="button"
+          class="nav-btn navbar__wrap__menu"
+        >
           <img src="/img/orinoco-menu-icon.svg" alt="menu principal" />
         </button>
 
         <!-- Currencies Btn -->
         <button
           id="currency-btn"
+          aria-label="menu divises"
           type="button"
           class="nav-btn navbar__wrap__currency"
         >
@@ -180,7 +186,12 @@
         </button>
 
         <!-- Cart Btn -->
-        <button id="cart-btn" type="button" class="nav-btn navbar__wrap__cart">
+        <button
+          id="cart-btn"
+          aria-label="panier"
+          type="button"
+          class="nav-btn navbar__wrap__cart"
+        >
           <div id="cart-pilot" class="nav-btn navbar__wrap__cart__pilot"></div>
           <i class="fas fa-shopping-basket navbar__icons"></i>
         </button>
@@ -197,14 +208,12 @@
             <li>
               <a
                 class="main__menu__link main__menu__link--active menu-hover"
-                href="/index.html"
+                href="/"
                 >home</a
               >
             </li>
             <li>
-              <a
-                class="main__menu__link menu-hover"
-                href="/product-list/index.html"
+              <a class="main__menu__link menu-hover" href="/product-list/"
                 >liste de produits</a
               >
             </li>
@@ -232,7 +241,7 @@
             </li>
             <li>
               E-mal :
-              <a class="menu-hover" href="mailto:e-mal : shop@orinoco.fr"
+              <a class="menu-hover" href="mailto:shop@orinoco.fr"
                 >shop@orinoco.fr</a
               >
             </li>
@@ -255,7 +264,6 @@
             </li>
             <li class="main__menu__networks__item">
               <a
-                aria-label=""
                 class="main__menu__networks__link menu-hover"
                 href="https://www.twitter.com"
                 ><i class="fab fa-twitter"></i
@@ -307,7 +315,10 @@
         <!--Cart product-->
         <section id="empty-cart" class="cart__menu__empty">
           <div class="cart__menu__empty__img">
-            <img src="../img/cactus.svg" alt="" />
+            <img
+              src="/img/cactus.svg"
+              alt="image d'un cactus indiquand la manque de produits dans le panier d'orinoco"
+            />
           </div>
           <h4>votre panier est désert</h4>
         </section>
@@ -322,9 +333,7 @@
             ></span>
           </h3>
           <div class="cta-btn cart__menu__product__btn">
-            <a class="cta-btn__link" href="../cart/index.html"
-              >Aller au panier</a
-            >
+            <a class="cta-btn__link" href="/cart/">Aller au panier</a>
           </div>
         </div>
       </nav>
