--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.instagram.com"
+                target="_blank"
                 ><i class="fab fa-instagram"></i
               ></a>
             </li>
@@ -258,6 +259,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.facebook.com"
+                target="_blank"
                 ><i class="fab fa-facebook-square"></i
               ></a>
             </li>
@@ -265,6 +267,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.twitter.com"
+                target="_blank"
                 ><i class="fab fa-twitter"></i
               ></a>
             </li>
