--- a/product-list/index.html
+++ b/product-list/index.html
@@ -256,6 +256,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.instagram.com"
+                target="_blank"
                 ><i class="fab fa-instagram"></i
               ></a>
             </li>
@@ -263,6 +264,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.facebook.com"
+                target="_blank"
                 ><i class="fab fa-facebook-square"></i
               ></a>
             </li>
@@ -270,6 +272,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.twitter.com"
+                target="_blank"
                 ><i class="fab fa-twitter"></i
               ></a>
             </li>
