--- a/product/index.html
+++ b/product/index.html
@@ -252,6 +252,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.instagram.com"
+                target="_blank"
                 ><i class="fab fa-instagram"></i
               ></a>
             </li>
@@ -259,6 +260,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.facebook.com"
+                target="_blank"
                 ><i class="fab fa-facebook-square"></i
               ></a>
             </li>
@@ -266,6 +268,7 @@
               <a
                 class="main__menu__networks__link menu-hover"
                 href="https://www.twitter.com"
+                target="_blank"
                 ><i class="fab fa-twitter"></i
               ></a>
             </li>
