fichiers minifies, version 1.0

--- a/cart/index.html
+++ b/cart/index.html
@@ -81,18 +81,18 @@
     ></script>
 
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
+    <link rel="stylesheet" href="/css/main.min.css" />
 
     <!-- Javascript -->
-    <!-- <script src="/js/cart.min.js" defer></script> -->
-    <!-- <script src="/js/form.min.js" defer></script> -->
+    <script src="/js/cart.min.js" defer></script>
+    <script src="/js/form.min.js" defer></script>
 
     <!-- Dev. CSS -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <!-- <link rel="stylesheet" href="/css/main.css" /> -->
 
     <!-- Dev. JavaScript -->
-    <script src="/js/cart.js" defer></script>
-    <script src="/js/form.js" defer></script>
+    <!-- <script src="/js/cart.js" defer></script> -->
+    <!-- <script src="/js/form.js" defer></script> -->
 
     <!-- Google Analytics -->
     <script>
