--- a/order/index.html
+++ b/order/index.html
@@ -30,16 +30,16 @@
     ></script>
 
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
+    <link rel="stylesheet" href="/css/main.min.css" />
 
     <!-- Javascript -->
-    <!-- <script src="/js/confirmation.min.js" defer></script> -->
+    <script src="/js/confirmation.min.js" defer></script>
 
     <!-- Dev. CSS -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <!-- <link rel="stylesheet" href="/css/main.css" /> -->
 
     <!-- Dev. JavaScript -->
-    <script src="/js/confirmation.js" defer></script>
+    <!-- <script src="/js/confirmation.js" defer></script> -->
   </head>
   <body>
     <div class="confirmation">
