--- a/product-list/index.html
+++ b/product-list/index.html
@@ -84,20 +84,20 @@
     ></script>
 
     <!-- Main CSS -->
-    <!-- <link rel="stylesheet" href="/css/main.min.css" /> -->
+    <link rel="stylesheet" href="/css/main.min.css" />
 
     <!-- Javascript -->
-    <!-- <script src="/js/dropdown-menu.min.js" defer></script> -->
-    <!-- <script src="/js/cart.min.js" defer></script> -->
-    <!-- <script src="/js/product-list.min.js" defer></script> -->
+    <script src="/js/dropdown-menu.min.js" defer></script>
+    <script src="/js/cart.min.js" defer></script>
+    <script src="/js/product-list.min.js" defer></script>
 
     <!-- Dev. CSS -->
-    <link rel="stylesheet" href="/css/main.css" />
+    <!-- <link rel="stylesheet" href="/css/main.css" /> -->
 
     <!-- Dev. JavaScript -->
-    <script src="/js/dropdown-menu.js" defer></script>
-    <script src="/js/cart.js" defer></script>
-    <script src="/js/product-list.js" defer></script>
+    <!-- <script src="/js/dropdown-menu.js" defer></script> -->
+    <!-- <script src="/js/cart.js" defer></script> -->
+    <!-- <script src="/js/product-list.js" defer></script> -->
 
     <!-- Facebook -->
     <meta property="og:url" content="https://rgalegria.github.io/orinoco/" />
